service PaymentService {

  rpc CreateOrder(CreateOrderRequest) returns (CreateOrderReply) {}

  rpc BuyOrder(BuyOrderRequest) returns (BuyOrderReply) {}

  rpc CancelOrder(CancelOrderRequest) returns (CancelOrderReply) {}
}

message CreateOrderRequest {
  uint64 amount = 1;
  Currency currency = 2;

  uint64 lead_id = 3;
  uint64 user_id = 4;
  uint64 conversation_id = 5;
  Direction direction = 6;

  string shop_card_number = 7;
}

message CreateOrderReply {
  uint64 id = 1;
  Errors error = 2;
  string error_message = 3;
}

message BuyOrderRequest {
  uint64 pay_id = 1;
  string ip = 2;

  // parameters to check permissions
  uint64 lead_id = 3;
  Direction direction = 4;
}

message BuyOrderReply {
  string redirect_url = 1;
  Errors error = 2;
  string error_message = 3;
}

message CancelOrderRequest {
  uint64 pay_id = 1;

  // parameters to check permissions
  uint64 lead_id = 3;
  Direction direction = 4;
}

message CancelOrderReply {
  bool cancelled = 1;
  Errors error = 2;
  string error_message = 3;
}

// chat messages
message ChatMessageNewOrder {
  uint64 pay_id = 1;
  uint64 amount = 2;
  Currency currency = 3;
}

message ChatMessagePaymentFinished {
  uint64 pay_id = 1;
  bool success = 3;
  uint64 amount = 4;
  Currency currency = 5;
  Direction direction = 6;
}

message ChatMessageOrderCancelled {
  uint64 pay_id = 1;
}

enum Currency {
  RUB = 0;
  USD = 1;
  COP = 2;
}

enum Errors {
  OK = 0;

  // internal errors
  INVALID_DATA = 1;
  DB_FAILED = 2;
  ALREADY_PAYED = 3;
  PAY_CANCELLED = 4;

  // external errors
  INIT_FAILED = 127;
  PAY_FAILED = 128;
  CHAT_DOWN = 129;
}

enum Direction {
  CLIENT_PAYS = 0;
  CLIENT_RECV = 1;
}

