service TelegramService {
  
  rpc NotifyMessage (NotifyMessageRequest) returns (NotifyMessageResult) {}
}

message NotifyMessageRequest {
  string channel = 1;
  string message = 2;
}

message NotifyMessageResult{

}
